# wasm-web-shell

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
www/: package-lock.json  package.json  tsconfig.json  webpack.config.js
www/aws-cli/: package-lock.json  package.json
www/aws-cli/component/: aws.core2.wasm  aws.core3.wasm  aws.core4.wasm  aws.d.ts  aws.js
www/aws-cli/component/exports/: wasi-filesystem-types.d.ts  wasi-io-streams.d.ts
www/aws-cli/component/imports/: wasi-cli-environment.d.ts  wasi-cli-terminal-input.d.ts  wasi-cli-terminal-output.d.ts  wasi-cli-terminal-stdin.d.ts  wasi-filesystem-types.d.ts  wasi-http-types.d.ts  wasi-io-streams.d.ts  wasi-poll-poll.d.ts
www/aws-cli/src/: index.js
www/src/: aws-command.ts  credentials.ts  index.tsx  web-shell.ts  worker.mjs  xterm-for-react.tsx
www/static/: index.html
