[workspace]
members = ["packages/aws-cli", "packages/wasi-engine"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = [
    "Eduardo Rodrigues <16357187+eduardomourar@users.noreply.github.com>",
]
edition = "2021"

[profile.release]
lto = true
panic = "abort"

[profile.release.package.aws-cli]
# Optimize for small code size
opt-level = "s"
strip = "debuginfo"

[workspace.dependencies]
cargo-component-bindings = { version = "0.1.0", git = "https://github.com/bytecodealliance/cargo-component", rev = "075e5a99448403a0e9f3ef5e848102aa096e8f62" }
tokio = { version = "1.32.0", default-features = false }
wasmtime = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068", features = [
    'component-model',
] }
wasmtime-wasi = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068" }
wasmtime-wasi-http = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068" }

[workspace.metadata.bin]
wasmtime-cli = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068", locked = true, bins = [
    "wasmtime",
], features = [
    "component-model",
] }
cargo-component = { version = "0.1.0", git = "https://github.com/bytecodealliance/cargo-component", rev = "075e5a99448403a0e9f3ef5e848102aa096e8f62", locked = true }
