[workspace]
members = ["packages/aws-cli", "packages/wasi-engine"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = [
    "Eduardo Rodrigues <16357187+eduardomourar@users.noreply.github.com>",
]
edition = "2021"

[profile.release]
lto = true
panic = "abort"

[profile.release.package.aws-cli]
# Optimize for small code size
opt-level = "s"
strip = "debuginfo"

[workspace.dependencies]
cargo-component-bindings = { version = "0.1.0", git = "https://github.com/bytecodealliance/cargo-component", rev = "67d99610a7f29aee1419987ec412126490a31254" }
tokio = { version = "1.32.0", default-features = false }
wasmtime = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068", features = [
    'component-model',
] }
wasmtime-wasi = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068" }
wasmtime-wasi-http = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068" }

[workspace.metadata.bin]
wasmtime-cli = { version = "14.0.0", git = "https://github.com/bytecodealliance/wasmtime", rev = "2ad057d735edc43f8ba89428d483f2b2430c1068", locked = true, bins = [
    "wasmtime",
], features = [
    "component-model",
] }
cargo-component = { version = "0.1.0", git = "https://github.com/bytecodealliance/cargo-component", rev = "82f2284a24684ed6667d99610a7f29aee1419987ec412126490a31254ada64dff1c07e2ff0d3c472", locked = true }
